--- a/.codenow.yaml
+++ b/.codenow.yaml
@@ -7,23 +7,28 @@ build:
   image: bitnami/dotnet-sdk:6.0.302
   # definitions of environment variables that will be used in all stages of your pipeline
   environmentVariables: []
-    #- key: variable1
-    #  value: value1
-    #- key: variable2
-    #  value: value2
-    #- key: variable3
-    #  value: value3
+  #- key: variable1
+  #  value: value1
+  #- key: variable2
+  #  value: value2
+  #- key: variable3
+  #  value: value3
   pipelines:
     release:
       pipeline: dotnet-nuget-app-release
     preview:
       pipeline: dotnet-nuget-app-preview
-    triggers: []
+    triggers:
+      - pipeline: dotnet-nuget-app-preview
+        enabled: true
+        branch: main
+        deployment:
+          enabled: false
 runtime:
   # Image is used as a base image for your runtime container
   image: mcr.microsoft.com/dotnet/aspnet:6.0
   # Port on which the service will be exposed
-  port: 80
+  port: "80"
   endpoints:
     external:
       # Expose service to external endpoint
